--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     implementation group: 'org.springframework.session', name: 'spring-session-jdbc', version: '3.1.1'
+    // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.1.4'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
