--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -1,4 +1,3 @@
-spring.profiles.include=oauth,real-db    
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.profiles.include=oauth,real-db
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.session.store-type=jdbc
-
